Remove unique constraint from AccountStatement: allow multiple statements per customer per date for maximum flexibility

--- a/backend/payments/templates/payments/generate_custom_statement.html
+++ b/backend/payments/templates/payments/generate_custom_statement.html
@@ -148,7 +148,7 @@
                                              <strong>Note:</strong> You can select both options, one option, or neither option
                                              depending on what you want to include in your custom statement.
                                              <strong>Selecting neither will create a statement with only orders.</strong>
-                                             <br><strong>Custom statements will use unique dates to prevent conflicts.</strong>
+                                             <br><strong>Custom statements will use today's date and can be created multiple times.</strong>
                                          </small>
                                      </div>
                                 </div>
