--- a/backend/payments/templates/payments/dashboard.html
+++ b/backend/payments/templates/payments/dashboard.html
@@ -22,6 +22,9 @@
                     <a href="{% url 'payments:payment_list' %}" class="btn btn-outline-primary btn-lg">
                         <i class="bi bi-list-ul me-2"></i>View All
                     </a>
+                    <a href="/invoices/credit-notes/" class="btn btn-outline-info btn-lg">
+                        <i class="bi bi-receipt-cutoff me-2"></i>Credit Notes
+                    </a>
                 </div>
             </div>
 
